force-app/main/default/objects/Payment__c/fields/Invoice_Payment__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Payment__c</fullName>
    <label>Invoice Payment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>