force-app/main/default/objects/Payment__c/fields/RazorPay_PaymentId__c.field-meta.xml
<CustomField>
    <fullName>RazorPay_PaymentId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>RazorPay PaymentId</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>