force-app/main/default/objects/Payment__c/fields/Shipment_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Shipment_Invoice__c</fullName>
    <label>Shipment Invoice</label>
    <referenceTo>Shipment_Invoice__c</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>